[Dev] ajout tirage carte

--- a/board/index.html
+++ b/board/index.html
@@ -7,10 +7,7 @@
 </head>
 <body>
   <div id="game-board">
-
-
     <div id="center-piece">PICTIONARY</div>
-    
     <div class="game-square yellow" id="square-0">P
       <span class="topComment">Start</span>
       <span id="player-0" class="player player-0" style="display: flex;">1</span>
@@ -83,6 +80,9 @@
 <div>
   <button id="roll-dice">Lancer le dé</button>
   <span id="dice-result"></span>
+</div>
+<div>
+  <button id="draw-card">Tirer une carte</button>
 </div>
   <script src="script.js"></script>
 </body>
