[Dev] Add players

--- a/board/index.html
+++ b/board/index.html
@@ -65,10 +65,10 @@
 
     <div class="game-square yellow" id="square-0">P
       <span class="topComment">Start</span>
-      <span id="player-0" class="player player-0" style="display: flex;">1</span>
-      <span id="player-1" class="player player-1" style="display: flex;">2</span>
-      <span id="player-2" class="player player-2" style="display: flex;">3</span>
-      <span id="player-3" class="player player-3" style="display: flex;">4</span>
+      <span id="player-0" class="player player-0" style="display: none;">1</span>
+      <span id="player-1" class="player player-1" style="display: none;">2</span>
+      <span id="player-2" class="player player-2" style="display: none;">3</span>
+      <span id="player-3" class="player player-3" style="display: none;">4</span>
     </div>
     <div class="game-square blue" id="square-1">O</div>
     <div class="game-square orange" id="square-2">A</div>
