--- a/board/index.html
+++ b/board/index.html
@@ -134,8 +134,12 @@
   
   <div class="button-container">
     <div>
-      <button id="roll-dice">Lancer le dé</button>
+      <button id="roll-dice">Lancer le dés</button>
       <span id="dice-result"></span>
+    </div>
+    <div>
+      <button id="lose">Passer le dés</button>
+      <span id="current-player"></span>
     </div>
     <div>
       <button id="draw-card">Tirer une carte</button>
