--- a/board/index.html
+++ b/board/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Plateau de Pictionary</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="player.css">
+  <link rel="stylesheet" href="board.css">
   <link rel="stylesheet" href="dice.css">
 </head>
 <body>
