--- a/board/index.html
+++ b/board/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Plateau de Pictionary</title>
+  <link rel="stylesheet" href="../common/styles.css">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="player.css">
   <link rel="stylesheet" href="board.css">
