--- a/card/index.html
+++ b/card/index.html
@@ -13,23 +13,23 @@
   <div id="container">
     <div id="card">
       <div class="Title">Pictionary</div>
-      <div class="category" id="yellow">
+      <div class="category yellow">
         <div class="category-content"></div>
         <div class="category-title">personne, lieu ou animal</div>
       </div>
-      <div class="category" id="blue">
+      <div class="category blue">
         <div class="category-content"></div>
         <div class="category-title">objet</div>
       </div>
-      <div class="category" id="orange">
+      <div class="category orange">
         <div class="category-content"></div>
         <div class="category-title">action</div>
       </div>
-      <div class="category" id="green">
+      <div class="category green">
         <div class="category-content"></div>
         <div class="category-title">mot difficile</div>
       </div>
-      <div class="category" id="red">
+      <div class="category red">
         <div class="category-content"></div>
         <div class="category-title">défi</div>
       </div>
