[Dev] Flip card on click

--- a/card/index.html
+++ b/card/index.html
@@ -10,33 +10,41 @@
 </head>
 
 <body>
-  <div id="container">
-    <div id="card">
-      <div class="Title">Pictionary</div>
-      <div class="category yellow">
-        <div class="category-content"></div>
-        <div class="category-title">personne, lieu ou animal</div>
-      </div>
-      <div class="category blue">
-        <div class="category-content"></div>
-        <div class="category-title">objet</div>
-      </div>
-      <div class="category orange">
-        <div class="category-content"></div>
-        <div class="category-title">action</div>
-      </div>
-      <div class="category green">
-        <div class="category-content"></div>
-        <div class="category-title">mot difficile</div>
-      </div>
-      <div class="category red">
-        <div class="category-content"></div>
-        <div class="category-title">défi</div>
-      </div>
-    </div>
+  <div class="container">
+    <div class="flip-card">
+        <div class="flip-card-inner">
+        <div class="flip-card-front">
+            <div class="title">PICTIONARY</div>
+            <div class="category yellow">
+                <div class="category-content"></div>
+                <div class="category-title">personne, lieu ou animal</div>
+            </div>
+            <div class="category blue">
+                <div class="category-content"></div>
+                <div class="category-title">objet</div>
+            </div>
+            <div class="category orange">
+                <div class="category-content"></div>
+                <div class="category-title">action</div>
+            </div>
+            <div class="category green">
+                <div class="category-content"></div>
+                <div class="category-title">mot difficile</div>
+            </div>
+            <div class="category red">
+                <div class="category-content"></div>
+                <div class="category-title">défi</div>
+            </div>
+        </div>
+        <div class="flip-card-back">
+            <div class="title">PICTIONARY</div>
+        </div>
+        </div>
+    </div> 
     <button class="drawButton">Tirer une carte</button>
-    <button class="seeButton">voir la carte</button>
-  </div>
+    <button class="seeButton">voir la carte</button>   
+    </div>
+
   <script src="script.js"></script>
 </body>
 
