--- a/card/index.html
+++ b/card/index.html
@@ -37,7 +37,9 @@
             </div>
         </div>
         <div class="flip-card-back">
-            <div class="title">PICTIONARY</div>
+          <div class="custom-shape"> 
+            <span class="border-span"></span> 
+            </div> 
         </div>
         </div>
     </div> 
