--- a/board/index.html
+++ b/board/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="player.css">
   <link rel="stylesheet" href="board.css">
+  <link rel="stylesheet" href="boardSquarePositions.css">
   <link rel="stylesheet" href="dice.css">
 </head>
 <body>
