[Dev] Change card title font size

--- a/card/index.html
+++ b/card/index.html
@@ -19,7 +19,7 @@
             <div class="title">PICTIONARY</div>
             <div class="category yellow">
                 <div class="category-content"></div>
-                <div class="category-title">personne, lieu ou animal</div>
+                <div class="category-title">P, L, A</div>
             </div>
             <div class="category blue">
                 <div class="category-content"></div>
