--- a/board/index.html
+++ b/board/index.html
@@ -144,7 +144,7 @@
     </div>
     <span id="dice-result">Résultat du dé: ?</span>
     <div>
-      <button id="lose">Passer le dé</button>
+      <button id="change-player">Passer le dé</button>
     </div>
     <span id="current-player"></span>
     <div>
