[Dev] Display selected player

--- a/board/index.html
+++ b/board/index.html
@@ -70,7 +70,7 @@
 
         <div class="game-square yellow" id="square-0">P
           <span class="topComment">Start</span>
-          <span id="player-0" class="player player-0-pos player-0-color"
+          <span id="player-0" class="player player-0-pos player-0-color selected"
             style="display: none;"></span>
           <span id="player-1" class="player player-1-pos player-1-color"
             style="display: none;"></span>
