[Dev] add apple mobile + qr

--- a/board/index.html
+++ b/board/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>Plateau de Pictionary</title>
     <link rel="stylesheet" href="../common/styles.css" />
     <link rel="stylesheet" href="styles.css" />
@@ -155,6 +156,12 @@
 
     <div class="button-container">
       <button id="draw-card">Tirer une carte</button>
+    </div>
+    <p></p>
+    <p></p>
+    <div >
+      <!-- Ajoutez votre fichier SVG ici -->
+      <img id="qr-code" src="../common/qr.svg" alt="QR Code" />
     </div>
 
     <script src="script.js"></script>
