[Dev] Play sound + refacto card js

--- a/card/index.html
+++ b/card/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <div class="flip-card">
-        <div class="flip-card-inner">
+        <div class="flip-card-inner is-flipped">
           <div class="flip-card-front">
             <div class="title">PICTIONARY</div>
             <div class="category yellow">
