--- a/card/index.html
+++ b/card/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tirage de carte</title>
-    <link rel="stylesheet" href="boardMini.css">
     <link rel="stylesheet" href="../board/boardSquarePositions.css">
     <link rel="stylesheet" href="../common/styles.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../common/boardMini.css" />
   </head>
 
   <body>
@@ -42,67 +42,67 @@
             <div class="custom-shape">
               <span class="border-span"></span>
             </div>
-            <div id="game-board">
-              <div class="game-square" id="square-0"></div>
-              <div class="game-square" id="square-1"></div>
-              <div class="game-square" id="square-2"></div>
-              <div class="game-square" id="square-3"></div>
-              <div class="game-square" id="square-4"></div>
-              <div class="game-square" id="square-5"></div>
-              <div class="game-square" id="square-6"></div>
-              <div class="game-square" id="square-7"></div>
-              <div class="game-square" id="square-8"></div>
-              <div class="game-square" id="square-9"></div>
+            <div id="game-board-mini">
+              <div class="game-square-mini" id="square-0"></div>
+              <div class="game-square-mini" id="square-1"></div>
+              <div class="game-square-mini" id="square-2"></div>
+              <div class="game-square-mini" id="square-3"></div>
+              <div class="game-square-mini" id="square-4"></div>
+              <div class="game-square-mini" id="square-5"></div>
+              <div class="game-square-mini" id="square-6"></div>
+              <div class="game-square-mini" id="square-7"></div>
+              <div class="game-square-mini" id="square-8"></div>
+              <div class="game-square-mini" id="square-9"></div>
 
-              <div class="game-square" id="square-10"></div>
-              <div class="game-square" id="square-11"></div>
-              <div class="game-square" id="square-12"></div>
-              <div class="game-square" id="square-13"></div>
-              <div class="game-square" id="square-14"></div>
-              <div class="game-square" id="square-15"></div>
-              <div class="game-square" id="square-16"></div>
-              <div class="game-square" id="square-17"></div>
-              <div class="game-square" id="square-18"></div>
-              <div class="game-square" id="square-19"></div>
+              <div class="game-square-mini" id="square-10"></div>
+              <div class="game-square-mini" id="square-11"></div>
+              <div class="game-square-mini" id="square-12"></div>
+              <div class="game-square-mini" id="square-13"></div>
+              <div class="game-square-mini" id="square-14"></div>
+              <div class="game-square-mini" id="square-15"></div>
+              <div class="game-square-mini" id="square-16"></div>
+              <div class="game-square-mini" id="square-17"></div>
+              <div class="game-square-mini" id="square-18"></div>
+              <div class="game-square-mini" id="square-19"></div>
 
-              <div class="game-square" id="square-20"></div>
-              <div class="game-square" id="square-21"></div>
-              <div class="game-square" id="square-22"></div>
-              <div class="game-square" id="square-23"></div>
-              <div class="game-square" id="square-24"></div>
-              <div class="game-square" id="square-25"></div>
-              <div class="game-square" id="square-26"></div>
-              <div class="game-square" id="square-27"></div>
-              <div class="game-square" id="square-28"></div>
-              <div class="game-square" id="square-29"></div>
+              <div class="game-square-mini" id="square-20"></div>
+              <div class="game-square-mini" id="square-21"></div>
+              <div class="game-square-mini" id="square-22"></div>
+              <div class="game-square-mini" id="square-23"></div>
+              <div class="game-square-mini" id="square-24"></div>
+              <div class="game-square-mini" id="square-25"></div>
+              <div class="game-square-mini" id="square-26"></div>
+              <div class="game-square-mini" id="square-27"></div>
+              <div class="game-square-mini" id="square-28"></div>
+              <div class="game-square-mini" id="square-29"></div>
 
-              <div class="game-square" id="square-30"></div>
-              <div class="game-square" id="square-31"></div>
-              <div class="game-square" id="square-32"></div>
-              <div class="game-square" id="square-33"></div>
-              <div class="game-square" id="square-34"></div>
-              <div class="game-square" id="square-35"></div>
-              <div class="game-square" id="square-36"></div>
-              <div class="game-square" id="square-37"></div>
-              <div class="game-square" id="square-38"></div>
-              <div class="game-square" id="square-39"></div>
+              <div class="game-square-mini" id="square-30"></div>
+              <div class="game-square-mini" id="square-31"></div>
+              <div class="game-square-mini" id="square-32"></div>
+              <div class="game-square-mini" id="square-33"></div>
+              <div class="game-square-mini" id="square-34"></div>
+              <div class="game-square-mini" id="square-35"></div>
+              <div class="game-square-mini" id="square-36"></div>
+              <div class="game-square-mini" id="square-37"></div>
+              <div class="game-square-mini" id="square-38"></div>
+              <div class="game-square-mini" id="square-39"></div>
 
-              <div class="game-square" id="square-40"></div>
-              <div class="game-square" id="square-41"></div>
-              <div class="game-square" id="square-42"></div>
-              <div class="game-square" id="square-43"></div>
-              <div class="game-square" id="square-44"></div>
-              <div class="game-square" id="square-45"></div>
-              <div class="game-square" id="square-46"></div>
-              <div class="game-square" id="square-47"></div>
-              <div class="game-square" id="square-48"></div>
-              <div class="game-square" id="square-49"></div>
+              <div class="game-square-mini" id="square-40"></div>
+              <div class="game-square-mini" id="square-41"></div>
+              <div class="game-square-mini" id="square-42"></div>
+              <div class="game-square-mini" id="square-43"></div>
+              <div class="game-square-mini" id="square-44"></div>
+              <div class="game-square-mini" id="square-45"></div>
+              <div class="game-square-mini" id="square-46"></div>
+              <div class="game-square-mini" id="square-47"></div>
+              <div class="game-square-mini" id="square-48"></div>
+              <div class="game-square-mini" id="square-49"></div>
 
-              <div class="game-square" id="square-50"></div>
-              <div class="game-square" id="square-51"></div>
-              <div class="game-square" id="square-52"></div>
-              <div class="game-square" id="square-53"></div>
-              <div class="game-square" id="square-54"></div>
+              <div class="game-square-mini" id="square-50"></div>
+              <div class="game-square-mini" id="square-51"></div>
+              <div class="game-square-mini" id="square-52"></div>
+              <div class="game-square-mini" id="square-53"></div>
+              <div class="game-square-mini" id="square-54"></div>
             </div>
           </div>
         </div>
