[Dev] Add card help on board

--- a/board/index.html
+++ b/board/index.html
@@ -159,28 +159,26 @@
 
 
     <div class="flip-card">
-      <div class="flip-card-inner is-flipped">
+      <div class="flip-card-inner">
         <div class="flip-card-front">
           <div class="title">PICTIONARY</div>
-          <div class="category yellow">
-            <div class="category-content"></div>
-            <div class="category-title">P, L, A</div>
+          <div class="category-help yellow">
+            <div class="category-title">Personne, Lieu, Animal</div>
           </div>
-          <div class="category blue">
-            <div class="category-content"></div>
-            <div class="category-title">objet</div>
+          <div class="category-help blue">
+            <div class="category-title">Objet</div>
           </div>
-          <div class="category orange">
-            <div class="category-content"></div>
-            <div class="category-title">action</div>
+          <div class="category-help orange">
+            <div class="category-help-content"></div>
+            <div class="category-title">Action</div>
           </div>
-          <div class="category green">
-            <div class="category-content"></div>
-            <div class="category-title">mot difficile</div>
+          <div class="category-help green">
+            <div class="category-help-content"></div>
+            <div class="category-title">Mot difficile</div>
           </div>
-          <div class="category red">
-            <div class="category-content"></div>
-            <div class="category-title">défi</div>
+          <div class="category-help red">
+            <div class="category-help-content"></div>
+            <div class="category-title">Défi</div>
           </div>
         </div>
         <div class="flip-card-back">
@@ -193,5 +191,6 @@
       </div>
     </div>
     <script src="script.js"></script>
+    <script src="../card/flipCard.js"></script>
   </body>
 </html>
