--- a/board/index.html
+++ b/board/index.html
@@ -66,10 +66,7 @@
             </div>
           </div>
         </div>
-
-        <div class="game-square yellow" id="square-0">
-          P
-          <span class="topComment">Start</span>
+        <div class="player-start-position"  id="player-start-position">
           <span
             id="player-0"
             class="player player-0-pos player-0-color selected"
@@ -90,6 +87,9 @@
             class="player player-3-pos player-3-color"
             style="display: none"
           ></span>
+        </div>
+        <div class="game-square yellow" id="square-0">P
+          <span class="topComment">Start</span>
         </div>
         <div class="game-square blue" id="square-1">O</div>
         <div class="game-square orange" id="square-2">A</div>
